# nlb

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .envrc  .gitattributes  .gitignore  .isort.cfg  BUILD  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bebop.json  gazelle_python.yaml  go.mod  go.sum  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  requirements.txt  requirements_legacy.txt  requirements_lock.txt  setup.sh
.bcr/: metadata.template.json  source.template.json
.claude/: launch.json
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: build-lobe-chat.yaml  gh_pages.yaml  publish_to_bcr.yaml  python_publish.yaml  python_release.yaml  regen-go-modules.yaml  regen-python-lockfile.yaml  release_prep.sh  rules_release.yaml  test.yaml  update-tles.yaml
apps/brm/: BUILD  Cargo.toml  README.md  labels.txt  serve.sh
apps/brm/assets/: BUILD  gen_powerups.py  gen_sfx.py
apps/brm/client/: BUILD  Cargo.toml
apps/brm/client/src/: audio.rs  gamepad.rs  input.rs  main.rs  net.rs  render.rs  touch.rs  web.rs
apps/brm/server/: BUILD  Cargo.toml
apps/brm/server/src/: game.rs  main.rs  ws.rs
apps/brm/shared/: BUILD  Cargo.toml
apps/brm/shared/src/: entity.rs  lib.rs  map.rs  protocol.rs  sim.rs  state.rs  tests.rs  tuning.rs
apps/brm/web/: BUILD  brm_net.js  index.html  mq_js_bundle.js
apps/euc/: BUILD  Cargo.toml  PROTOCOL.md  README.md  labels.txt  serve.sh
apps/euc/assets/: gen_icons.py
apps/euc/client/: BUILD  Cargo.toml
apps/euc/client/src/: lib.rs  net.rs  state.rs  ui.rs
apps/euc/examples/: README.md  bot.py  docker-compose.yaml
apps/euc/server/: BUILD  Cargo.toml
apps/euc/server/src/: auth.rs  lobby.rs  main.rs  table.rs  tests.rs  ws.rs
apps/euc/shared/: BUILD  Cargo.toml
apps/euc/shared/src/: ai.rs  cards.rs  game.rs  legal.rs  lib.rs  protocol.rs  rules.rs  score.rs  tests.rs  view.rs
apps/euc/web/: BUILD  index.html  login.html  manifest.webmanifest  style.css
apps/hyd/: .gitignore  BUILD  Cargo.toml  README.md  alembic.ini  labels.txt  next.config.ts  package.json  serve.sh
apps/hyd/app/: BUILD  globals.css  layout.tsx  page.tsx
apps/hyd/app/api/progress/: route.ts
apps/hyd/app/api/progress/[id]/: route.ts
apps/hyd/client/: BUILD  Cargo.toml
apps/hyd/client/src/: lib.rs
apps/hyd/lib/: BUILD  db.ts
apps/hyd/management/: BUILD  README.md  client.py  db_manager.py  env.py  schema.py
apps/hyd/public/: BUILD
apps/hyd/server/: BUILD  Cargo.toml
apps/hyd/server/src/: main.rs
apps/hyd/shared/: BUILD  Cargo.toml
apps/hyd/shared/src/: lib.rs
apps/hyd/styles/: BUILD  globals.css
apps/hyd/web/: BUILD  index.html  style.css
apps/iir/: .env.example  .env.public  BUILD  Cargo.toml  README.md  labels.txt  next.config.ts  package.json  serve.sh  tailwind.config.ts
apps/iir/client/: BUILD  Cargo.toml
apps/iir/client/src/: lib.rs
apps/iir/server/: BUILD  Cargo.toml
apps/iir/server/src/: main.rs
apps/setec/: BUILD  labels.txt
apps/spirit_tracks/: BUILD  README.md  example_config.json  labels.txt
blog/: .gitignore  BUILD  mdx-components.tsx  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
blog/_posts/: dynamic-routing.mdx  hello-world.mdx  preview.mdx
blog/app/: BUILD  layout.tsx  mdx.d.ts  page.tsx
blog/interfaces/: BUILD  post.ts
blog/lib/: BUILD  api.ts  constants.ts
blog/public/: .nojekyll  BUILD
blog/rust/: BUILD  game-of-life.tsx  simple-maze.tsx
blog/styles/: BUILD  markdown-styles.module.css
bzl/configs/: BUILD
bzl/constraints/: BUILD  defs.bzl
bzl/macros/: BUILD  buffham.bzl  cc.bzl  cc_alias.hpp.template  emb.bzl  flatbuffer_py_library.bzl  go_image.bzl  jekyll.bzl  js_image.bzl  next.bzl  patch.bzl  pico.bzl  platform_binary.bzl  pytest_wrapper.py  python.bzl  rust_image.bzl  unittest.bzl  vitest.bzl
bzl/queries/: BUILD  files.cquery  output_groups.bzl  providers.cquery
bzl/rules/: BUILD  feature.bzl  pico.bzl  platform_transition.bzl
bzl/test_module/: .bazelrc  .gitignore  BUILD  MODULE.bazel  patch.bzl  source.patch  source.txt  test_bcr.sh
bzl/toolchains/: BUILD  gcc.BUILD  xtensa_clang.BUILD  xtensa_gcc.BUILD
class/: .gitignore
class/sample/: BUILD  main.tex
emb/: BUILD  client.py  hello.c  hello.cpp  hello.proto  system.bop  system.hpp  system.py
emb/bindings/: BUILD  util.cpp  util.pyi
emb/playground/: BUILD  client_fb.py  client_pb.py  hello_fb.cpp  hello_pb.cpp  system.fbs  system.proto
emb/project/: BUILD  client.py  host_test_base.py  shell.py
emb/slic/: BUILD  hc_sr04.cc  hc_sr04.hpp  hc_sr04_test.cc
emb/util/: BUILD  cobs.hpp  cobs_test.cpp  log.hpp  ring_buffer.hpp  ring_buffer_test.cc
emb/yaal/: BUILD  audio.hpp  audio_clip.hpp  flash.hpp  gpio.hpp  pio.hpp  timer.hpp  watchdog.hpp
lrb/: BUILD  package.json
lrb/config/: BUILD  Cargo.toml  lib.rs
lrb/game_of_life/: BUILD  Cargo.toml  README.md  lib.rs  utils.rs
lrb/rng/: BUILD  Cargo.toml  lib.rs
misc/: README.md  bazel-complete.bash
misc/dravesr/: keybindings.json
misc/udev/: 60-openocd.rules  99-pico.rules
nlb/: BUILD  pypi_README.md  pypi_README_legacy.md
nlb/arduino/: BUILD  client.py
nlb/authentik/: BUILD  client.py  nlb_invite.py
nlb/buffham/: BUILD  README.md  bh.py  buffham.py  cpp_generator.py  cpp_generator_test.cc  cpp_generator_test.py  engine.py  engine_test.py  parser.py  parser_test.py  py_generator.py  py_generator_test.py  schema.bh  schema_bh.py  template_generator.py  template_generator_test.py
nlb/datastructure/: BUILD  bidirectional_dict.py  bidirectional_dict_test.py
pages/: BUILD  Gemfile  README.md  _config.yml
rules_jekyll/: jekyll.bzl
secrets/: BUILD  README.md
services/: README.md  docker-compose.hyd.yaml  docker-compose.laptop.yaml  docker-compose.mealie.yaml  docker-compose.octoprint.yaml  docker-compose.overleaf.yaml  docker-compose.pine.yaml  docker-compose.yaml  nginx.conf
toolchains/: BUILD
tools/: BUILD  bazelisms.md  dockerisms.md  juliaisms.md  multitool.lock.json  tools.go  workspace_tool.bzl
(+418 files in other folders)
