"""Bazel fun"""

module(
    name = "ryandraves_nlb",
    version = "0.1.2",
)

#
# "Standard" dependencies
#
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "rules_platform", version = "0.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Currently unused. Yay!
# git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

#
# Pico SDK & Picotool
#
bazel_dep(name = "pico-sdk", version = "2.3.0")
git_override(
    module_name = "pico-sdk",
    commit = "ef9ddf906bdee7de0ffe62bdab7d74cc67ae9c5d",
    remote = "https://github.com/RyanDraves/pico-sdk.git",
)

register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:linux-aarch64-rp2040",
    "@pico-sdk//bazel/toolchain:linux-aarch64-rp2350",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2040",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2350",
)

# Pioasm is not yet available in the Pico SDK Bazel build
# https://github.com/raspberrypi/pico-sdk/tree/master/bazel#known-issues-and-limitations
# but the binary is distributed in another repo and configured in `tools/multitool.lock.json`.
bazel_dep(name = "picotool", version = "2.3.0")
git_override(
    module_name = "picotool",
    commit = "ab847d796ecaaacd13b2d82a18a764a8904b9aed",
    remote = "https://github.com/RyanDraves/picotool.git",
)

#
# Rules Python
#
bazel_dep(name = "aspect_rules_py", version = "1.11.7")

# Match version with `bzl/test_module/MODULE.bazel`
bazel_dep(name = "rules_python", version = "2.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,  # Spammy debug; not set up yet
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "python_versions")
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

#
# venv management
#

bazel_dep(name = "rules_uv", version = "0.89.2")

#
# Gazelle
#
bazel_dep(name = "gazelle", version = "0.52.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "2.2.0")

#
# Buildifier
#
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.5.1.3",
    dev_dependency = True,
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1f9360db1834d115c48279d38a97f30d64d3fd4a",
    remote = "https://github.com/helly25/bazel-compile-commands-extractor.git",
    # Replace the commit hash with the latest from
    # https://github.com/helly25/bazel-compile-commands-extractor/commits/main
)

#
# Bazel-controlled dev tooling
#
bazel_dep(name = "bazel_env.bzl", version = "0.8.0", dev_dependency = True)

bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:multitool.lock.json")
use_repo(multitool, "multitool")

#
# Pybind11
#
bazel_dep(name = "pybind11_bazel", version = "3.0.1")

#
# Zmq
#
# NOTE: `cppzmq` (header-only) pulls the BCR `libzmq` module for its headers,
# but only the prebuilt archives below are ever linked.
bazel_dep(name = "cppzmq", version = "4.10.0.bcr.2")

# Prebuilt libzmq binaries; `//bzl/deps:libzmq` selects the right platform.
# Build new archives with the `cache-and-release` repo's libzmq workflow.
http_archive(
    name = "libzmq_linux_x86_64",
    build_file = "//bzl/deps:libzmq.BUILD",
    sha256 = "fcc1580d542be23fb2831e688f9167afd0c409b745163b3c2e1e877c930e01ff",
    strip_prefix = "libzmq-linux-x86_64",
    url = "https://github.com/RyanDraves/cache-and-release/releases/download/libzmq-v4.3.5-2/libzmq-linux-x86_64.tar.gz",
)

http_archive(
    name = "libzmq_macos_arm64",
    build_file = "//bzl/deps:libzmq.BUILD",
    sha256 = "61902778d31f6cd6184c63a00276b3c4e86fd88d6e4979a886fb98e5f92f6a42",
    strip_prefix = "libzmq-macos-arm64",
    url = "https://github.com/RyanDraves/cache-and-release/releases/download/libzmq-v4.3.5-2/libzmq-macos-arm64.tar.gz",
)

#
# Google Test
#
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

#
# Web development
#
bazel_dep(name = "aspect_rules_js", version = "3.2.3")
bazel_dep(name = "aspect_rules_ts", version = "3.9.2")
bazel_dep(name = "rules_nodejs", version = "6.7.5")
bazel_dep(name = "aspect_rules_lint", version = "2.7.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.13.1")
use_repo(node, "nodejs_toolchains")

# Pick out some platforms manually for cross-platform builds
# https://github.com/aspect-build/rules_js/issues/2135
use_repo(node, "nodejs_linux_amd64")
use_repo(node, "nodejs_linux_arm64")
use_repo(node, "nodejs_darwin_arm64")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
pnpm.pnpm(pnpm_version_from = "//:package.json")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
        "//:pnpm-workspace.yaml",
        "//blog:package.json",
        "//lrb:package.json",
        "//nlb/buffham/vscode:package.json",
    ],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = {
        "@next/eslint-plugin-next": ["blog"],
        # vsce's secretlint scan resolves its rule modules with a node_modules
        # walk-up from the package store; hoist them to the root so it succeeds
        "@secretlint/secretlint-formatter-sarif": [""],
        "@secretlint/secretlint-rule-no-dotenv": [""],
        "@secretlint/secretlint-rule-preset-recommend": [""],
        "eslint-config-react-app": ["react"],
        "eslint@8.28.0": ["react"],
    },
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

#
# Rust
#
bazel_dep(name = "rules_rust", version = "0.71.3")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.71.3")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    # Note: this REPLACES the default extra triples, so the wasm targets (used by
    # the brm web client) must be listed explicitly alongside the Linux triples
    # we add for cross-compiling the server into its container image.
    extra_target_triples = [
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    # Pin nightly to a date before rustc added `--fix-cortex-a53-843419` to the
    # aarch64-unknown-linux-gnu link args. The hermetic Zig cc used to link the
    # cross-compiled Linux server rejects that arg ("unsupported linker arg"),
    # and Zig hasn't added support even as of 0.16.0 — the fix is wrapper-side
    # (cargo-zigbuild), not in any released hermetic_cc_toolchain. Revisit/unpin
    # once a toolchain that strips the arg is available.
    versions = ["nightly/2026-06-04"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

register_toolchains(
    "@rules_rust_wasm_bindgen//:default_wasm_bindgen_toolchain",
)

# Hermetic Zig-based C toolchains for cross-compiling the Rust server to Linux
# (tokio links libc, so unlike Go it needs a cross cc toolchain). NOT registered
# globally — that would override the default/RBE cc toolchains for every Linux
# build. Instead `--config=image` in .bazelrc adds them via --extra_toolchains,
# so only image builds (which compile no other Linux C/C++) use Zig.
bazel_dep(name = "hermetic_cc_toolchain", version = "4.2.0")

zig_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig_toolchains, "zig_sdk")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.spec(
    package = "wasm-bindgen",
    # Must match the wasm-bindgen-cli bundled by rules_rust_wasm_bindgen.
    version = "=0.2.121",
)
crate.spec(
    package = "wee_alloc",
    version = "0.4.5",
)
crate.spec(
    package = "spin",
    version = "0.12.0",
)
crate.spec(
    features = ["spin_no_std"],
    package = "lazy_static",
    version = "1.4",
)
crate.spec(
    package = "console_error_panic_hook",
    version = "0.1.7",
)
crate.spec(
    features = ["console"],
    package = "web-sys",
    version = "0.3",
)
crate.from_specs()
use_repo(crate, "crates")

# Isolated crate hub for the `brm` game (apps/brm). Its dependency tree
# (macroquad, axum, tokio, ...) is far too large to hand-list as specs, so it is
# generated from the app's own Cargo workspace lockfile and kept separate from
# the `@crates` hub above.
crate.from_cargo(
    name = "brm_crates",
    cargo_lockfile = "//apps/brm:Cargo.lock",
    manifests = [
        "//apps/brm:Cargo.toml",
    ],
)
use_repo(crate, "brm_crates")

# Isolated crate hub for the `euc` Euchre game (apps/euc), mirroring the brm
# hub above (leptos/axum/tokio trees are too large to hand-list as specs).
# wasm_split_helpers (leptos transitive) expands a proc-macro that reads
# CARGO_MANIFEST_PATH, which cargo sets but Bazel does not; any stable string
# works (it's only a symbol-name stamp).
crate.annotation(
    crate = "wasm_split_helpers",
    repositories = ["euc_crates"],
    rustc_env = {"CARGO_MANIFEST_PATH": "wasm_split_helpers"},
)
crate.from_cargo(
    name = "euc_crates",
    cargo_lockfile = "//apps/euc:Cargo.lock",
    manifests = [
        "//apps/euc:Cargo.toml",
    ],
)
use_repo(crate, "euc_crates")

# Isolated crate hub for the iir web app (apps/iir), mirroring the euc hub:
# leptos + axum + reqwest trees are too large to hand-list as specs. The
# wasm_split_helpers annotation is required by leptos (see the euc hub above).
crate.annotation(
    crate = "wasm_split_helpers",
    repositories = ["iir_crates"],
    rustc_env = {"CARGO_MANIFEST_PATH": "wasm_split_helpers"},
)

# ring (via reqwest's rustls-tls) compiles C crypto through cc-rs, which passes
# the Rust triple `x86_64-unknown-linux-gnu` as clang `--target`. The hermetic
# Zig cc rejects that vendor form ("UnknownOperatingSystem"); appending a
# Zig-native `-target` in CFLAGS wins (last flag) and lets ring cross-compile.
crate.annotation(
    build_script_env = {
        "CFLAGS_x86_64_unknown_linux_gnu": "-target x86_64-linux-gnu",
        "CFLAGS_aarch64_unknown_linux_gnu": "-target aarch64-linux-gnu",
    },
    crate = "ring",
    repositories = ["iir_crates"],
)
crate.from_cargo(
    name = "iir_crates",
    cargo_lockfile = "//apps/iir:Cargo.lock",
    manifests = [
        "//apps/iir:Cargo.toml",
    ],
)
use_repo(crate, "iir_crates")

# Isolated crate hub for the hyd web app (apps/hyd), mirroring the iir hub:
# leptos + axum + tokio-postgres trees are too large to hand-list as specs.
crate.annotation(
    crate = "wasm_split_helpers",
    repositories = ["hyd_crates"],
    rustc_env = {"CARGO_MANIFEST_PATH": "wasm_split_helpers"},
)
crate.from_cargo(
    name = "hyd_crates",
    cargo_lockfile = "//apps/hyd:Cargo.lock",
    manifests = [
        "//apps/hyd:Cargo.toml",
    ],
)
use_repo(crate, "hyd_crates")

#
# Go
#
bazel_dep(name = "rules_go", version = "0.62.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")
# go_sdk.nogo(nogo = "//tools/lint:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
# Run 'bazel mod tidy' to update this
use_repo(go_deps, "com_github_spf13_cobra", "com_github_tailscale_setec", "com_tailscale", "land_charm_bubbles_v2", "land_charm_bubbletea_v2", "land_charm_lipgloss_v2")

#
# Containerization
#
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "tar.bzl", version = "0.10.7")
# TODO: Consider https://registry.bazel.build/modules/container_structure_test
# https://github.com/aspect-build/rules_js/blob/08eb590169cf9c61a02f7056bb3486f8214e90b6/e2e/js_image_oci/src/BUILD.bazel#L78-L84

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    digest = "sha256:fac46bff2e02f51425b6e33b0e1169f55dfb053d83511ca28aa50c09fd5ed7a4",
    image = "debian",
    platforms = [
        "linux/386",
        "linux/amd64",
        "linux/arm/v5",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/mips64le",
        "linux/ppc64le",
        "linux/s390x",
    ],
    tag = "latest",
)
use_repo(oci, "debian", "debian_linux_386", "debian_linux_amd64", "debian_linux_arm64_v8", "debian_linux_arm_v5", "debian_linux_arm_v7", "debian_linux_mips64le", "debian_linux_ppc64le", "debian_linux_s390x")

oci.pull(
    name = "distroless_base",
    digest = "sha256:f4a335ca209e1d2ee873102c17c389ad0142e3d5b21aee2817e9cc9c01d87d20",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

#
# Repo shuffling
#
bazel_dep(name = "rules_java", version = "9.7.0")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "copybara",
    # From https://github.com/google/copybara/releases/download/v20250811/copybara_deploy.jar.sha256
    sha256 = "513d98947a3468b2df74b8f3d524d261bed54609791bb789060f6eaac9aee57b",
    urls = ["https://github.com/google/copybara/releases/download/v20250811/copybara_deploy.jar"],
)
