[project]
name = "nlb"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nlb", "emb", "apps"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "services/authentik/invitation_group_add.py",
    "**/*_bh.pyi",
    "nlb/buffham/schema_bh.py",
]

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["collections", "typing"]

[tool.ruff.format]
quote-style = "single"
