[workspace]
resolver = "2"
members = ["shared", "server", "client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# Single source of third-party dep versions, consumed by the `euc_crates`
# crate_universe hub in //:MODULE.bazel. First-party deps (euc_shared,
# //lrb/rng) are linked via Bazel BUILD files, NOT declared here — crate
# universe splices this workspace into a temp dir where out-of-workspace path
# deps don't resolve.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.3"
leptos = { version = "0.8", features = ["csr"] }
# Must match the wasm-bindgen-cli bundled by rules_rust_wasm_bindgen.
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
